@@ -1,0 +1,4 @@
+{ lib, hostname, ... }:
+{
+  imports = [ ../../hosts/${hostname}/users/Chris/home-manager.nix ];
+}
