@@ -1,0 +1,8 @@
+{
+  programs = {
+    thunderbird.enable = true;
+    libreoffice.enable = true;
+    gthumb.enable = true;
+    gnome-system-monitor.enable = true;
+  };
+}
